// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Radio Controlled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
    >
      <label
        class="ClickInputLabel-zdnqd7-0 cdVzeO"
      >
        <input
          aria-checked="true"
          aria-invalid="false"
          aria-required="false"
          checked=""
          class="Radio__RadioInput-rhd32j-1 kXplpX Radio-rhd32j-2 eaLglY"
          id="radio-1"
          type="radio"
        />
        <div
          class="Radio__VisualRadio-rhd32j-0 jtAgjT"
        />
        <span
          class="Text-sc-15glbbx-0 gSNEe"
          color="currentColor"
          font-size="medium"
        >
           I am controlled and checked 
        </span>
      </label>
    </div>
    <div
      class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
    >
      <label
        class="ClickInputLabel-zdnqd7-0 cdVzeO"
      >
        <input
          aria-checked="false"
          aria-invalid="false"
          aria-required="false"
          class="Radio__RadioInput-rhd32j-1 kXplpX Radio-rhd32j-2 eaLglY"
          id="radio-2"
          type="radio"
        />
        <div
          class="Radio__VisualRadio-rhd32j-0 jtAgjT"
        />
        <span
          class="Text-sc-15glbbx-0 gSNEe"
          color="currentColor"
          font-size="medium"
        >
           I am controlled and unchecked 
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Radio Radio 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
    >
      <label
        class="ClickInputLabel-zdnqd7-0 cdVzeO"
      >
        <input
          aria-invalid="false"
          aria-required="false"
          class="Radio__RadioInput-rhd32j-1 kXplpX Radio-rhd32j-2 eaLglY"
          id="radio"
          type="radio"
        />
        <div
          class="Radio__VisualRadio-rhd32j-0 jtAgjT"
        />
        <span
          class="Text-sc-15glbbx-0 gSNEe"
          color="currentColor"
          font-size="medium"
        >
           I am a radio button 
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Radio Set to defaultChecked 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
    >
      <label
        class="ClickInputLabel-zdnqd7-0 cdVzeO"
      >
        <input
          aria-invalid="false"
          aria-required="false"
          checked=""
          class="Radio__RadioInput-rhd32j-1 kXplpX Radio-rhd32j-2 eaLglY"
          id="radio"
          type="radio"
        />
        <div
          class="Radio__VisualRadio-rhd32j-0 jtAgjT"
        />
        <span
          class="Text-sc-15glbbx-0 gSNEe"
          color="currentColor"
          font-size="medium"
        >
           I am checked by default 
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Radio Set to disabled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
    >
      <label
        class="ClickInputLabel-zdnqd7-0 cDeIIW"
        disabled=""
      >
        <input
          aria-invalid="false"
          aria-required="false"
          class="Radio__RadioInput-rhd32j-1 ijGHIn Radio-rhd32j-2 eaLglY"
          disabled=""
          id="radio-1"
          type="radio"
        />
        <div
          class="Radio__VisualRadio-rhd32j-0 cKIgFL"
          disabled=""
        />
        <span
          class="Text-sc-15glbbx-0 kEBDnw"
          color="currentColor"
          disabled=""
          font-size="medium"
        >
           I am disabled 
        </span>
      </label>
    </div>
    <div
      class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
    >
      <label
        class="ClickInputLabel-zdnqd7-0 cDeIIW"
        disabled=""
      >
        <input
          aria-checked="true"
          aria-invalid="false"
          aria-required="false"
          checked=""
          class="Radio__RadioInput-rhd32j-1 ijGHIn Radio-rhd32j-2 eaLglY"
          disabled=""
          id="radio-2"
          type="radio"
        />
        <div
          class="Radio__VisualRadio-rhd32j-0 cKIgFL"
          disabled=""
        />
        <span
          class="Text-sc-15glbbx-0 kEBDnw"
          color="currentColor"
          disabled=""
          font-size="medium"
        >
           I am disabled 
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Radio Set to error 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
    >
      <label
        class="ClickInputLabel-zdnqd7-0 cdVzeO"
      >
        <input
          aria-invalid="true"
          aria-required="false"
          class="Radio__RadioInput-rhd32j-1 jvCqep Radio-rhd32j-2 eaLglY"
          id="radio"
          type="radio"
        />
        <div
          class="Radio__VisualRadio-rhd32j-0 jtAgjT"
        />
        <span
          class="Text-sc-15glbbx-0 gSNEe"
          color="currentColor"
          font-size="medium"
        >
           I am error 
        </span>
      </label>
    </div>
    <div
      class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
    >
      <label
        class="ClickInputLabel-zdnqd7-0 cdVzeO"
      >
        <input
          aria-invalid="true"
          aria-required="false"
          checked=""
          class="Radio__RadioInput-rhd32j-1 jvCqep Radio-rhd32j-2 eaLglY"
          id="radio"
          type="radio"
        />
        <div
          class="Radio__VisualRadio-rhd32j-0 jtAgjT"
        />
        <span
          class="Text-sc-15glbbx-0 gSNEe"
          color="currentColor"
          font-size="medium"
        >
           I am error 
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Radio Set to required 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
    >
      <label
        class="ClickInputLabel-zdnqd7-0 cdVzeO"
      >
        <input
          aria-invalid="false"
          aria-required="true"
          class="Radio__RadioInput-rhd32j-1 kXplpX Radio-rhd32j-2 eaLglY"
          id="radio"
          required=""
          type="radio"
        />
        <div
          class="Radio__VisualRadio-rhd32j-0 jtAgjT"
        />
        <span
          class="Text-sc-15glbbx-0 gSNEe"
          color="currentColor"
          font-size="medium"
        >
           I am a radio button 
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Radio using ref to control focus 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 hQvIAg Radio-rhd32j-2 eaLglY"
    >
      <label
        class="ClickInputLabel-zdnqd7-0 cdVzeO"
      >
        <input
          aria-checked="true"
          aria-invalid="false"
          aria-required="false"
          checked=""
          class="Radio__RadioInput-rhd32j-1 kXplpX Radio-rhd32j-2 eaLglY"
          type="radio"
        />
        <div
          class="Radio__VisualRadio-rhd32j-0 jtAgjT"
        />
        <span
          class="Text-sc-15glbbx-0 gSNEe"
          color="currentColor"
          font-size="medium"
        >
           I am controlled and checked 
        </span>
      </label>
    </div>
    <button
      class="Button__WrapperButton-hxfi59-0 kXvjuR"
    >
      Focus the Input
    </button>
  </div>
</div>
`;
